--- a/package.json
+++ b/package.json
@@ -1,38 +1,29 @@
 {
-  "name": "cobalt-api",
+  "name": "rapidgrab-youtube-downloader",
   "version": "1.0.0",
-  "description": "Node.js YTDL Library for downloading videos or audio using the Cobalt API.",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/code3-dev/CobaltAPI.git"
+  "description": "Backend for RapidGrab YouTube video downloader using Node.js and ytdl-core",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
   },
   "keywords": [
-    "ytdl",
+    "youtube",
+    "downloader",
     "video",
     "audio",
-    "download",
-    "Cobalt API",
-    "YouTube",
-    "TikTok",
-    "Twitter",
-    "nodejs"
+    "ytdl-core",
+    "nodejs",
+    "express",
+    "api"
   ],
-  "author": "Hossein Pira <h3dev.pira@gmail.com> (https://github.com/code3-dev)",
+  "author": "Your Name",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/code3-dev/CobaltAPI/issues"
-  },
-  "homepage": "https://github.com/code3-dev/CobaltAPI#readme",
   "dependencies": {
-    "@distube/ytdl-core": "^4.15.9",
-    "@stephanemoni/ytdl-core": "github:stephanemoni/ytdl-core",
-    "axios": "^1.7.2",
-    "axios-retry": "^4.5.0",
-    "dotenv": "^16.4.5",
-    "moment": "^2.30.1",
-    "node-fetch-cache": "^5.0.2",
-    "youtubei.js": "^13.2.0",
-    "yup": "^1.4.0"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "ytdl-core": "^4.11.2"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
