--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "rapidgrab-backend",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Backend for RapidGrab YouTube Downloader",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
