--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rapidgrab-proxy-backend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A proxy backend for the YouTube downloader",
   "main": "server.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "node-fetch": "^2.7.0"
   }
 }
