--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "rapidgrab-yt-dlp-backend-final",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "The final backend API using the yt-dlp command-line tool.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "yt-dlp-wrap --download"
+    "postinstall": "./node_modules/.bin/yt-dlp-wrap --download"
   },
   "author": "",
   "license": "ISC",
