--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "rapidgrab-yt-dlp-backend-final",
-  "version": "1.5.0",
-  "description": "The final backend API using the yt-dlp command-line tool.",
+  "name": "yt-dlp-node-backend",
+  "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "yt-dlp-wrap": "^2.3.12"
+    "express": "^4.18.2"
   }
 }
